2016-07-01  Marc A. Smith  <marc.smith@parodyne.com>

	added the stubs for new dialogs and uncommented dialog menu actions in main()

	added a simple signal handler in the TUI for INT, TERM, and HUP

	added support for different color "themes" in the TUI (satisfies issue # 51); lots of TUI code cleanup

2016-06-29  Marc A. Smith  <marc.smith@parodyne.com>

	added the iSCSI initiator service (open-iscsi + open-isns) which allows an ESOS host to use remote iSCSI storage (targets)

2016-06-28  Marc A. Smith  <marc.smith@parodyne.com>

	lots of TUI code cleanup, file header documentation, and function documentation

2016-06-26  Marc A. Smith  <marc.smith@parodyne.com>

	Merge branch 'dswartz-issue-182'

	Merge branch 'issue-182' of https://github.com/dswartz/esos into dswartz-issue-182

	tweaked the health-check script to use more meaningful names/values in the memory and disk usage sections (satisfies issue # 181)

2016-06-26  Dan Swartzendruber  <dswartz@druber.com>

	Change check_zpools.sh to diagnose not running as root - this is necessary if nrpe is run as other than root (which is what is recommended.)

2016-06-25  Marc A. Smith  <marc.smith@parodyne.com>

	added the useful list-pcie-ports.sh script (from Dell @ http://linux.dell.com/cgi-bin/cgit.cgi/sys-admin-tools.git/plain/list-pcie-ports.sh)

2016-06-22  Marc A. Smith  <marc.smith@parodyne.com>

	additional condition for MegaRAD hot spare drives that are "spun down" in the health-check script

	added support for interface VLANs in the rc network script

	fix for ZFS build inconsistencies by specifying '--sysconfdir' for both spl and zfs

2016-05-31  Marc A. Smith  <marc.smith@parodyne.com>

	build fixes for Ubuntu in the opensm and munin-c targets (should resolve issue # 164); fixed issue in TUI with getBlockDevChoice() -- needed to strip the block-device string from the udevadm command

	up'd SCST to version 3.1.x/r6895 which at least fixes an issue with megaraid_sas hanging when deleting VD's
