@@ -168,3 +168,4 @@ nmon
 munin-c
 open-iscsi
 open-isns
+coreutils
