@@ -150,3 +150,4 @@ ff74bfb5234cc5a0994641109ae8c189  scst-3.1.x_r6895.tar.gz
 f1e2f97e100e80e00ce3ead797538290  munin-c-0.0.9.tar.gz
 ae67cd02967f80d1f52a89edcbb2c39d  open-iscsi-master_20160628.tar.gz
 e0047d68b4d7a0b6104f67851b8b6475  open-isns-0.96.tar.gz
+070e43ba7f618d747414ef56ab248a48  coreutils-8.25.tar.xz
