@@ -150,3 +150,4 @@ e32339db8365f0f10b873928095da47dd3e8a40f8ea5edd5501320d4ff30209f  linux-4.5.2.ta
 2c8f46e17121bc1c422f42f37be752bf918c802db843cc9c2eeda2a5fa9f1a7d  munin-c-0.0.9.tar.gz
 d419a0ab4320b1021294b0cbe596ad0a844a42f9c9bacc002261215647d8224e  open-iscsi-master_20160628.tar.gz
 487fd0d87826423ea99dc159826d0b654a5da016ed670d4395a77bfa4f62e2ec  open-isns-0.96.tar.gz
+31e67c057a5b32a582f26408c789e11c2e8d676593324849dcf5779296cdce87  coreutils-8.25.tar.xz
